fix toolbar: align flex items in right area

--- a/modules/toolbar/scss/_toolbar.scss
+++ b/modules/toolbar/scss/_toolbar.scss
@@ -32,6 +32,7 @@
         @include display(flex);
         @include flex-direction(row);
         @include justify-content(flex-end);
+        @include align-items(center);
     }
 
     // Toolbar label
